# realtime-crypto-price-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
livecrypto/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
staticfiles/tracker/: main.js  styles.css
tracker/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
tracker/management/commands/: makesuperuser.py
tracker/migrations/: 0001_initial.py  0002_alter_price_options.py  0003_alter_price_options.py
tracker/templates/tracker/: index.html
